Fixed JS error in menu display on IE6

--- a/trunk/tpl/Standard/Navigation/office_xp/office_xp.css
+++ b/trunk/tpl/Standard/Navigation/office_xp/office_xp.css
@@ -87,6 +87,7 @@ Menu bar related selectors
 	background-image: url(office_xp_divider.png);
 	background-position: left;
 	background-repeat: no-repeat;
+	border: 0px solid black;
 	border-bottom: 1px solid black;
 	cursor: default;
 	width: 100%;
